src/gen/StlParser.java
// Generated from C:/repo_symaut/sym_automata/src/parser/StlParser.g4 by ANTLR 4.5.3

package gen;

import java.util.List;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class StlParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int LPAREN = 1, RPAREN = 2, LBRACE = 3, RBRACE = 4, LBRACK = 5, RBRACK = 6, SEMICOLON = 7,
			COLON = 8, COMMA = 9, DOT = 10, Input = 11, Output = 12, Internal = 13, Constant = 14, DomainTypeReal = 15,
			DomainTypeInt = 16, DomainTypeBool = 17, Assertion = 18, From = 19, NotOperator = 20, OrOperator = 21,
			AndOperator = 22, IffOperator = 23, ImpliesOperator = 24, XorOperator = 25, RiseOperator = 26, FallOperator = 27,
			AlwaysOperator = 28, EventuallyOperator = 29, UntilOperator = 30, HistoricallyOperator = 31, OnceOperator = 32,
			SinceOperator = 33, NextOperator = 34, OracleOperator = 35, PreviousOperator = 36, EqualOperator = 37,
			NotEqualOperator = 38, GreaterOrEqualOperator = 39, LesserOrEqualOperator = 40, GreaterOperator = 41,
			LesserOperator = 42, EQUAL = 43, BooleanLiteral = 44, TRUE = 45, FALSE = 46, IntegerLiteral = 47,
			RealLiteral = 48, Identifier = 49, LINE_TERMINATOR = 50, WHITESPACE = 51, COMMENT = 52, LINE_COMMENT = 53;
	public static final int RULE_stlfile = 0, RULE_stlSpecification = 1, RULE_assertion = 2, RULE_declaration = 3,
			RULE_variableDeclaration = 4, RULE_assignment = 5, RULE_domainType = 6, RULE_ioType = 7, RULE_interval = 8,
			RULE_intervalTime = 9, RULE_expression = 10, RULE_idComp = 11, RULE_equalityCmpOp = 12, RULE_comparisonOp = 13,
			RULE_primary = 14, RULE_booleanLiteral = 15, RULE_integerLiteral = 16, RULE_literal = 17, RULE_identifier = 18;
	public static final String[] ruleNames = { "stlfile", "stlSpecification", "assertion", "declaration",
			"variableDeclaration", "assignment", "domainType", "ioType", "interval", "intervalTime", "expression", "idComp",
			"equalityCmpOp", "comparisonOp", "primary", "booleanLiteral", "integerLiteral", "literal", "identifier" };

	private static final String[] _LITERAL_NAMES = {};
	private static final String[] _SYMBOLIC_NAMES = { null, "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK",
			"SEMICOLON", "COLON", "COMMA", "DOT", "Input", "Output", "Internal", "Constant", "DomainTypeReal",
			"DomainTypeInt", "DomainTypeBool", "Assertion", "From", "NotOperator", "OrOperator", "AndOperator", "IffOperator",
			"ImpliesOperator", "XorOperator", "RiseOperator", "FallOperator", "AlwaysOperator", "EventuallyOperator",
			"UntilOperator", "HistoricallyOperator", "OnceOperator", "SinceOperator", "NextOperator", "OracleOperator",
			"PreviousOperator", "EqualOperator", "NotEqualOperator", "GreaterOrEqualOperator", "LesserOrEqualOperator",
			"GreaterOperator", "LesserOperator", "EQUAL", "BooleanLiteral", "TRUE", "FALSE", "IntegerLiteral", "RealLiteral",
			"Identifier", "LINE_TERMINATOR", "WHITESPACE", "COMMENT", "LINE_COMMENT" };
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "StlParser.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public StlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class StlfileContext extends ParserRuleContext {
		public StlSpecificationContext stlSpecification() {
			return getRuleContext(StlSpecificationContext.class, 0);
		}

		public TerminalNode EOF() {
			return getToken(StlParser.EOF, 0);
		}

		public StlfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_stlfile;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterStlfile(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitStlfile(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitStlfile(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final StlfileContext stlfile() throws RecognitionException {
		StlfileContext _localctx = new StlfileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stlfile);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(38);
				stlSpecification();
				setState(39);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StlSpecificationContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}

		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class, i);
		}

		public List<AssertionContext> assertion() {
			return getRuleContexts(AssertionContext.class);
		}

		public AssertionContext assertion(int i) {
			return getRuleContext(AssertionContext.class, i);
		}

		public StlSpecificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_stlSpecification;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterStlSpecification(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitStlSpecification(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitStlSpecification(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final StlSpecificationContext stlSpecification() throws RecognitionException {
		StlSpecificationContext _localctx = new StlSpecificationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stlSpecification);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Input) | (1L << Output) | (1L << Internal)
						| (1L << Constant) | (1L << DomainTypeReal) | (1L << DomainTypeInt) | (1L << DomainTypeBool))) != 0)) {
					{
						{
							setState(41);
							declaration();
						}
					}
					setState(46);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(47);
							assertion();
						}
					}
					setState(50);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while (_la == Assertion);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssertionContext extends ParserRuleContext {
		public TerminalNode Assertion() {
			return getToken(StlParser.Assertion, 0);
		}

		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class, 0);
		}

		public TerminalNode COLON() {
			return getToken(StlParser.COLON, 0);
		}

		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class, 0);
		}

		public TerminalNode SEMICOLON() {
			return getToken(StlParser.SEMICOLON, 0);
		}

		public AssertionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_assertion;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterAssertion(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitAssertion(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitAssertion(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final AssertionContext assertion() throws RecognitionException {
		AssertionContext _localctx = new AssertionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assertion);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(52);
				match(Assertion);
				setState(53);
				identifier();
				setState(54);
				match(COLON);
				setState(55);
				expression(0);
				setState(56);
				match(SEMICOLON);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_declaration;
		}

		public DeclarationContext() {
		}

		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}

	public static class DeclVariableContext extends DeclarationContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class, 0);
		}

		public DeclVariableContext(DeclarationContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterDeclVariable(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitDeclVariable(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitDeclVariable(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		try {
			_localctx = new DeclVariableContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
				setState(58);
				variableDeclaration();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public DomainTypeContext domainType() {
			return getRuleContext(DomainTypeContext.class, 0);
		}

		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class, 0);
		}

		public TerminalNode SEMICOLON() {
			return getToken(StlParser.SEMICOLON, 0);
		}

		public TerminalNode Constant() {
			return getToken(StlParser.Constant, 0);
		}

		public IoTypeContext ioType() {
			return getRuleContext(IoTypeContext.class, 0);
		}

		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class, 0);
		}

		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_variableDeclaration;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterVariableDeclaration(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitVariableDeclaration(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitVariableDeclaration(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(61);
				_la = _input.LA(1);
				if (_la == Constant) {
					{
						setState(60);
						match(Constant);
					}
				}

				setState(64);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Input) | (1L << Output) | (1L << Internal))) != 0)) {
					{
						setState(63);
						ioType();
					}
				}

				setState(66);
				domainType();
				setState(67);
				identifier();
				setState(69);
				_la = _input.LA(1);
				if (_la == EQUAL) {
					{
						setState(68);
						assignment();
					}
				}

				setState(71);
				match(SEMICOLON);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_assignment;
		}

		public AssignmentContext() {
		}

		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}

	public static class AsgnExprContext extends AssignmentContext {
		public TerminalNode EQUAL() {
			return getToken(StlParser.EQUAL, 0);
		}

		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class, 0);
		}

		public AsgnExprContext(AssignmentContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterAsgnExpr(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitAsgnExpr(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitAsgnExpr(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class AsgnLiteralContext extends AssignmentContext {
		public TerminalNode EQUAL() {
			return getToken(StlParser.EQUAL, 0);
		}

		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class, 0);
		}

		public AsgnLiteralContext(AssignmentContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterAsgnLiteral(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitAsgnLiteral(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitAsgnLiteral(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
			case 1:
				_localctx = new AsgnLiteralContext(_localctx);
				enterOuterAlt(_localctx, 1); {
				setState(73);
				match(EQUAL);
				setState(74);
				literal();
			}
				break;
			case 2:
				_localctx = new AsgnExprContext(_localctx);
				enterOuterAlt(_localctx, 2); {
				setState(75);
				match(EQUAL);
				setState(76);
				expression(0);
			}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DomainTypeContext extends ParserRuleContext {
		public TerminalNode DomainTypeReal() {
			return getToken(StlParser.DomainTypeReal, 0);
		}

		public TerminalNode DomainTypeBool() {
			return getToken(StlParser.DomainTypeBool, 0);
		}

		public TerminalNode DomainTypeInt() {
			return getToken(StlParser.DomainTypeInt, 0);
		}

		public DomainTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_domainType;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterDomainType(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitDomainType(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitDomainType(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final DomainTypeContext domainType() throws RecognitionException {
		DomainTypeContext _localctx = new DomainTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_domainType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(79);
				_la = _input.LA(1);
				if (!((((_la) & ~0x3f) == 0
						&& ((1L << _la) & ((1L << DomainTypeReal) | (1L << DomainTypeInt) | (1L << DomainTypeBool))) != 0))) {
					_errHandler.recoverInline(this);
				} else {
					consume();
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IoTypeContext extends ParserRuleContext {
		public TerminalNode Input() {
			return getToken(StlParser.Input, 0);
		}

		public TerminalNode Output() {
			return getToken(StlParser.Output, 0);
		}

		public TerminalNode Internal() {
			return getToken(StlParser.Internal, 0);
		}

		public IoTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_ioType;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterIoType(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitIoType(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitIoType(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final IoTypeContext ioType() throws RecognitionException {
		IoTypeContext _localctx = new IoTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ioType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(81);
				_la = _input.LA(1);
				if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Input) | (1L << Output) | (1L << Internal))) != 0))) {
					_errHandler.recoverInline(this);
				} else {
					consume();
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntervalContext extends ParserRuleContext {
		public List<IntervalTimeContext> intervalTime() {
			return getRuleContexts(IntervalTimeContext.class);
		}

		public IntervalTimeContext intervalTime(int i) {
			return getRuleContext(IntervalTimeContext.class, i);
		}

		public TerminalNode COLON() {
			return getToken(StlParser.COLON, 0);
		}

		public TerminalNode LPAREN() {
			return getToken(StlParser.LPAREN, 0);
		}

		public TerminalNode LBRACK() {
			return getToken(StlParser.LBRACK, 0);
		}

		public TerminalNode RPAREN() {
			return getToken(StlParser.RPAREN, 0);
		}

		public TerminalNode RBRACK() {
			return getToken(StlParser.RBRACK, 0);
		}

		public IntervalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_interval;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterInterval(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitInterval(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitInterval(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final IntervalContext interval() throws RecognitionException {
		IntervalContext _localctx = new IntervalContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_interval);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(83);
				_la = _input.LA(1);
				if (!(_la == LPAREN || _la == LBRACK)) {
					_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(84);
				intervalTime();
				setState(85);
				match(COLON);
				setState(86);
				intervalTime();
				setState(87);
				_la = _input.LA(1);
				if (!(_la == RPAREN || _la == RBRACK)) {
					_errHandler.recoverInline(this);
				} else {
					consume();
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntervalTimeContext extends ParserRuleContext {
		public IntervalTimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_intervalTime;
		}

		public IntervalTimeContext() {
		}

		public void copyFrom(IntervalTimeContext ctx) {
			super.copyFrom(ctx);
		}
	}

	public static class IntervalTimeLiteralContext extends IntervalTimeContext {
		public TerminalNode IntegerLiteral() {
			return getToken(StlParser.IntegerLiteral, 0);
		}

		public IntervalTimeLiteralContext(IntervalTimeContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterIntervalTimeLiteral(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitIntervalTimeLiteral(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitIntervalTimeLiteral(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final IntervalTimeContext intervalTime() throws RecognitionException {
		IntervalTimeContext _localctx = new IntervalTimeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_intervalTime);
		try {
			_localctx = new IntervalTimeLiteralContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
				setState(89);
				match(IntegerLiteral);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_expression;
		}

		public ExpressionContext() {
		}

		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}

	public static class ExprNotUnaryExprContext extends ExpressionContext {
		public TerminalNode NotOperator() {
			return getToken(StlParser.NotOperator, 0);
		}

		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class, 0);
		}

		public ExprNotUnaryExprContext(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterExprNotUnaryExpr(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitExprNotUnaryExpr(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitExprNotUnaryExpr(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class ExprSinceContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}

		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class, i);
		}

		public TerminalNode SinceOperator() {
			return getToken(StlParser.SinceOperator, 0);
		}

		public IntervalContext interval() {
			return getRuleContext(IntervalContext.class, 0);
		}

		public ExprSinceContext(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterExprSince(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitExprSince(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitExprSince(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class ExprIdCompContext extends ExpressionContext {
		public IdCompContext idComp() {
			return getRuleContext(IdCompContext.class, 0);
		}

		public ExprIdCompContext(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterExprIdComp(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).exitExprIdComp(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof StlParserVisitor)
				return ((StlParserVisitor<? extends T>) visitor).visitExprIdComp(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class ExprEventuallyContext extends ExpressionContext {
		public TerminalNode EventuallyOperator() {
			return getToken(StlParser.EventuallyOperator, 0);
		}

		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class, 0);
		}

		public IntervalContext interval() {
			return getRuleContext(IntervalContext.class, 0);
		}

		public ExprEventuallyContext(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof StlParserListener)
				((StlParserListener) listener).enterExprEventually(this);
		}
